<resources>
    <string name="app_name">XPensive</string>
    <string name="action_manage">Manage Identifiers</string>

    <!-- Page and tab title -->
    <string name="dashboard_fragment_title">XPense Dashboard</string>
    <string name="add_source_fragment_title">Add XPense Source</string>
    <string name="manage_source_fragment_title">Manage XPense Source</string>
    <string name="add_history_fragment_title">Add XPense History</string>

    <!-- Dashboard page -->
    <string name="dashboard_chart_label">Chart</string>
    <string name="dashboard_history_label">History</string>
    <string name="dashboard_fab_description">Add Expense History</string>

    <!-- XPense Source page -->
    <string name="source_name_input_hint">Source Name</string>
    <string name="source_description_input_hint">Description</string>
    <string name="source_current_balance_input_hint">Current Balance (Optional)</string>

    <!-- XPense History page -->
    <string name="history_empty_title">We\'re good!</string>
    <string name="history_empty_message">
        No expense history so far, but should that happened, we will present it here.
    </string>
    <string name="history_empty_image_description">Saving Money Illustration</string>
    <string name="history_type_icon_description">Expense Type Icon</string>
    <string name="history_amount_input_hint">Amount</string>
    <string name="history_source_selection_hint">Source</string>
    <string name="history_type_selection_hint">Category</string>
    <string name="history_remarks_input_hint">Notes</string>
    <string name="history_date_selection_hint">Date</string>

    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_new">Add New</string>
    <string name="data_added">Data Added</string>

    <string name="xpense_type_personal">Personal</string>
    <string name="xpense_type_business">Business</string>
    <string name="xpense_type_grocery">Grocery</string>
    <string name="xpense_type_daily">Daily Needs/Regular</string>
    <string name="xpense_type_debt">Debt</string>
    <string name="xpense_type_other">Other</string>

    <string name="default_expense_source">Wallet</string>
    <string name="default_expense_source_description">Default expense source</string>
</resources>
