<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_dashboard">

    <fragment
        android:id="@+id/fragment_dashboard"
        android:name="com.efronnypardede.xpensive.dashboard.DashboardFragment"
        android:label="@string/dashboard_fragment_title"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboard_to_manage_source"
            app:destination="@id/fragment_manage_source" />
        <action
            android:id="@+id/action_dashboard_to_add_history"
            app:destination="@id/fragment_add_history" />

    </fragment>

    <fragment
        android:id="@+id/fragment_manage_source"
        android:name="com.efronnypardede.xpensive.manage.ManageSourceFragment"
        android:label="@string/manage_source_fragment_title"
        tools:layout="@layout/fragment_manage_source">

        <action
            android:id="@+id/action_manage_to_add_source"
            app:destination="@id/fragment_add_source" />

    </fragment>

    <fragment
        android:id="@+id/fragment_add_source"
        android:name="com.efronnypardede.xpensive.manage.AddSourceFragment"
        android:label="@string/add_source_fragment_title"
        tools:layout="@layout/fragment_add_source" />

    <fragment
        android:id="@+id/fragment_add_history"
        android:name="com.efronnypardede.xpensive.dashboard.AddHistoryFragment"
        android:label="@string/add_history_fragment_title"
        tools:layout="@layout/fragment_add_history" />

</navigation>
