<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isVisible"
            type="Boolean" />
    </data>

    <LinearLayout
        android:id="@+id/wrapper_no_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:visibility="@{isVisible ? View.VISIBLE : View.GONE}"
        app:layout_constraintStart_toStartOf="@id/recyclerview_expense_history"
        app:layout_constraintTop_toTopOf="@id/recyclerview_expense_history">

        <ImageView
            android:id="@+id/imageview_vault_illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/history_empty_image_description"
            android:src="@drawable/illustration_saving_money" />

        <TextView
            android:id="@+id/textview_no_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/history_empty_title"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_no_history_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_padding"
            android:gravity="center_horizontal"
            android:text="@string/history_empty_message"
            android:textSize="@dimen/caption_text_size" />

    </LinearLayout>
</layout>
