<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_source_name"
            style="@style/DefaultTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source_name_input_hint"
            android:importantForAutofill="no"
            app:counterMaxLength="@integer/source_name_max_length"
            app:layout_constraintBottom_toTopOf="@id/inputlayout_source_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_source_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/source_name_max_length"
                android:paddingVertical="@dimen/rounded_rectangle_vertical_padding"
                android:textSize="@dimen/add_source_input_text_size"
                tools:text="Halo BCA" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_source_description"
            style="@style/DefaultTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:hint="@string/source_description_input_hint"
            android:importantForAutofill="no"
            app:counterMaxLength="@integer/source_description_max_length"
            app:layout_constraintBottom_toTopOf="@id/inputlayout_current_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputlayout_source_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_source_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:maxLength="@integer/source_description_max_length"
                android:paddingVertical="@dimen/rounded_rectangle_vertical_padding"
                android:textSize="@dimen/add_source_input_text_size"
                tools:text="Bank Agrikultular Rakyat Indonesia" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_current_balance"
            style="@style/DefaultTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:hint="@string/source_current_balance_input_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputlayout_source_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_current_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:paddingVertical="@dimen/rounded_rectangle_vertical_padding"
                android:textSize="@dimen/add_source_input_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/rounded_rectangle_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_min="@dimen/default_button_min_height"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
